--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -1,3 +1,8 @@
 title=Title
 appTitle = App Title
-appDescription=App Description
+appDescription = App Description
+loginTitle = Login
+mainTitle = 
+btnCadastrar = Cadastrar produtos
+btnListar = Listar Produtos
+btnOrderBy = Ordenar por
